--- a/Assets/UI/Signin.uxml
+++ b/Assets/UI/Signin.uxml
@@ -17,5 +17,6 @@
             </ui:VisualElement>
             <ui:Label name="chat-messages" style="flex-shrink: 0; flex-grow: 1; margin-left: 3px; margin-right: 3px; margin-top: 3px; margin-bottom: 3px; background-color: rgb(255, 245, 172); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-top-left-radius: 3px; border-bottom-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; white-space: normal; height: 129px; -unity-text-align: lower-left; cursor: none; display: flex;" />
         </ui:VisualElement>
+        <ui:Button text="Disconnect" name="disconnect" style="position: absolute; right: 20px; bottom: 28px; width: 93px; height: 20px;" />
     </ui:VisualElement>
 </ui:UXML>
